--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -23,3 +23,28 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.fs-content{
+  field-sizing: content;
+  resize: none;
+}
+
+/* === Scrollbar Dark Style === */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #1a1a1a; /* خلفية المسار */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #555; /* لون الشريط */
+  border-radius: 8px;
+  border: 2px solid #1a1a1a; /* يندمج مع الخلفية */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #777; /* لون الشريط عند المرور */
+}
