--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -24,9 +24,11 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.fs-content{
+textarea{
   field-sizing: content;
   resize: none;
+  border: none;
+  outline: none;
 }
 
 /* === Scrollbar Dark Style === */
